# LiriKonVM

./: CMakeLists.txt  README.md  instructions.h  interpreter.cpp  interpreter.h  launch.sh  main.cpp
include/: allocator.h  array.h  decoder.h  frame.h  instruction.h  interpreter.h  lexer.h  parser.h  runner.h  vm.h
isa/: instructions.h  isa_for_parser.h
src/: allocator.cpp  array.cpp  decoder.cpp  frame.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp
